--- a/dinov2/index.html
+++ b/dinov2/index.html
@@ -219,7 +219,7 @@
                             <div class="col-lg-6 d-flex">
                                 <div class="hero_content">
                                     <h2 class="mb-0">RUST Hosting</h2>
-                                    <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi harum omnis consequatur consequuntur.</p>
+                                    <p class="mb-4">The team's main customer is the rebates. Choosing all of these consequences is a result.</p>
                                     <div class="hero_plans">
                                         <span class="starting_at">Servers start as</span>
                                         <h3 class="price mb-4">&dollar;0.75<span class="ms-2">per / Slots</span></h3>
@@ -675,4 +675,5 @@
 	<script src="assets/js/game-selector.js"></script>
 	<script src="assets/js/reviews.js"></script>
 </body>
+
 </html>
