--- a/dinov2/index.html
+++ b/dinov2/index.html
@@ -19,7 +19,7 @@
 		<div class="container">
 		<a class="navbar-brand" href="index.html">
 			<img class="img-fluid" src="assets/images/logo.svg" alt="DinoNode Logo">
-			Dino<span>Node</span>
+			Code<span>Nest</span>
 		</a>
 	    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#dinoNavbar" aria-controls="dinoNavbar" aria-expanded="false" aria-label="Toggle navigation">
 	      	<span class="navbar-toggler-icon"></span>
@@ -677,5 +677,6 @@
 </body>
 
 </html>
+
 
 
