--- a/dinov2/index.html
+++ b/dinov2/index.html
@@ -613,10 +613,10 @@
 			<div class="col-lg-4">
 				<h3>
 					<img class="img-fluid" src="assets/images/logo.svg" alt="DinoNode Footer Logo">
-					Dino<span class="blue">Node</span>
+					Code<span class="blue">Nest</span>
 				</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing, elit.</p>
-				<p class="copy">&copy; Copyright 2024 DinoNode. All Rights Reserved</p>
+				<p>The team's main customer is the rebates.</p>
+				<p class="copy">&copy; Copyright 2025 CodeNest. All Rights Reserved</p>
 			</div>
 			<div class="col-lg-8">
 				<div class="row">
@@ -677,6 +677,7 @@
 </body>
 
 </html>
+
 
 
 
