--- a/dinov2/minecraft.html
+++ b/dinov2/minecraft.html
@@ -42,7 +42,7 @@
 <head>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
   	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Minecraft Hosting | DinoNode</title>
+	<title>Minecraft Hosting | CodeNest</title>
 	<link rel="icon" href="assets/images/logo.svg" type="image/svg+xml">
 	<link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
 	<!-- Custom CSS -->
@@ -56,8 +56,8 @@
 <nav id="navbar_top" class="navbar navbar-dark navbar-expand-lg fixed-top">
 		<div class="container">
 		<a class="navbar-brand" href="index.html">
-			<img class="img-fluid" src="assets/images/logo.svg" alt="DinoNode Logo">
-			Dino<span>Node</span>
+			<img class="img-fluid" src="assets/images/logo.svg" alt="CodeNest Logo">
+			Code<span>Nest</span>
 		</a>
 	    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#dinoNavbar" aria-controls="dinoNavbar" aria-expanded="false" aria-label="Toggle navigation">
 	      	<span class="navbar-toggler-icon"></span>
@@ -481,4 +481,5 @@
 <script src="assets/js/custom.js"></script>	<script src="assets/js/blinker.js"></script>
 	<script src="assets/js/minecraft.js"></script>
 </body>
+
 </html>
